Fix clicking issue on ios

--- a/static/styles/about.less
+++ b/static/styles/about.less
@@ -4,6 +4,8 @@
     padding-right: 25vw;
     padding-left: 40px;
     padding-top: 30px;
+    padding-bottom: 1px;
+    
     @media screen and (max-width: 667px) {
         padding-left: 20px;
         padding-top: 15px;
